[gd_scene load_steps=13 format=3 uid="uid://main_scene_001"]

[ext_resource type="PackedScene" uid="uid://b5x8qhyy1234" path="res://scenes/player.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://ui_scene_001" path="res://scenes/ui.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cafe_building_001" path="res://scenes/cafe_building.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://pixelate_layer_001" path="res://scenes/pixelate_layer.tscn" id="4"]
[ext_resource type="Script" path="res://scripts/setup_textures.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://shop_building_001" path="res://scenes/shop_building.tscn" id="6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.95, 0.6, 0.4, 1)
sky_horizon_color = Color(1, 0.7, 0.5, 1)
ground_bottom_color = Color(0.4, 0.3, 0.3, 1)
ground_horizon_color = Color(0.6, 0.5, 0.4, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
tonemap_mode = 2
glow_enabled = true
glow_intensity = 0.3
glow_bloom = 0.15
ssao_enabled = true
ssao_radius = 2.0
ssao_intensity = 1.5
ssil_enabled = true
ssil_intensity = 0.5
volumetric_fog_enabled = true
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.9, 0.8, 0.7, 1)
volumetric_fog_emission = Color(0.3, 0.2, 0.15, 1)
volumetric_fog_emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.3, 0.35, 0.3, 1)
metallic = 0.0
roughness = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
material = SubResource("StandardMaterial3D_ground")
size = Vector3(2000, 1, 2000)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(2000, 1, 2000)

[node name="Main" type="Node3D"]
script = ExtResource("5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.353, 0.353, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 10, 0)
light_color = Color(1, 0.9, 0.7, 1)
light_energy = 0.8
shadow_enabled = true
shadow_blur = 2.0
directional_shadow_mode = 1

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
visible = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")
disabled = false

[node name="Sidewalk" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 6)
material_override = SubResource("StandardMaterial3D_ground")
use_collision = false
size = Vector3(15, 0.2, 6)
visible = false

[node name="Street" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 15)
use_collision = false
size = Vector3(20, 0.2, 10)
visible = false

[node name="StreetLine1" type="CSGBox3D" parent="Street"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.01, 0)
size = Vector3(0.3, 0.05, 2)

[node name="StreetLine2" type="CSGBox3D" parent="Street"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
size = Vector3(0.3, 0.05, 2)

[node name="StreetLine3" type="CSGBox3D" parent="Street"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.01, 0)
size = Vector3(0.3, 0.05, 2)

[node name="CityProps" type="Node3D" parent="."]
visible = false

[node name="Tree1" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 6)

[node name="Trunk" type="CSGBox3D" parent="CityProps/Tree1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
use_collision = true
size = Vector3(0.5, 3, 0.5)

[node name="Leaves" type="CSGBox3D" parent="CityProps/Tree1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
use_collision = false
size = Vector3(2.5, 2.5, 2.5)

[node name="LeavesMid" type="CSGBox3D" parent="CityProps/Tree1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
use_collision = false
size = Vector3(2, 1.5, 2)

[node name="LeavesTop" type="CSGBox3D" parent="CityProps/Tree1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
use_collision = false
size = Vector3(1, 1, 1)

[node name="Tree2" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 6)

[node name="Trunk" type="CSGBox3D" parent="CityProps/Tree2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
use_collision = true
size = Vector3(0.5, 3, 0.5)

[node name="Leaves" type="CSGBox3D" parent="CityProps/Tree2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
use_collision = false
size = Vector3(2.5, 2.5, 2.5)

[node name="LeavesMid" type="CSGBox3D" parent="CityProps/Tree2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
use_collision = false
size = Vector3(2, 1.5, 2)

[node name="LeavesTop" type="CSGBox3D" parent="CityProps/Tree2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
use_collision = false
size = Vector3(1, 1, 1)

[node name="Tree3" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)

[node name="Trunk" type="CSGBox3D" parent="CityProps/Tree3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
use_collision = true
size = Vector3(0.5, 3, 0.5)

[node name="Leaves" type="CSGBox3D" parent="CityProps/Tree3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
use_collision = false
size = Vector3(2.5, 2.5, 2.5)

[node name="LeavesMid" type="CSGBox3D" parent="CityProps/Tree3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
use_collision = false
size = Vector3(2, 1.5, 2)

[node name="LeavesTop" type="CSGBox3D" parent="CityProps/Tree3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
use_collision = false
size = Vector3(1, 1, 1)

[node name="Tree4" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Trunk" type="CSGBox3D" parent="CityProps/Tree4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
use_collision = true
size = Vector3(0.5, 3, 0.5)

[node name="Leaves" type="CSGBox3D" parent="CityProps/Tree4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
use_collision = false
size = Vector3(2.5, 2.5, 2.5)

[node name="LeavesMid" type="CSGBox3D" parent="CityProps/Tree4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
use_collision = false
size = Vector3(2, 1.5, 2)

[node name="LeavesTop" type="CSGBox3D" parent="CityProps/Tree4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
use_collision = false
size = Vector3(1, 1, 1)

[node name="Bush1" type="CSGBox3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.5, 4)
use_collision = false
size = Vector3(1.5, 1, 1.5)

[node name="Bush2" type="CSGBox3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, 4)
use_collision = false
size = Vector3(1.5, 1, 1.5)

[node name="Bush3" type="CSGBox3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.4, 3)
use_collision = false
size = Vector3(1.2, 0.8, 1.2)

[node name="Bush4" type="CSGBox3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.4, 3)
use_collision = false
size = Vector3(1.2, 0.8, 1.2)

[node name="Planter1" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 7)

[node name="PlanterBase" type="CSGBox3D" parent="CityProps/Planter1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
use_collision = true
size = Vector3(0.8, 0.6, 0.8)

[node name="Plant" type="CSGBox3D" parent="CityProps/Planter1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
use_collision = false
size = Vector3(0.4, 0.6, 0.4)

[node name="Planter2" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 7)

[node name="PlanterBase" type="CSGBox3D" parent="CityProps/Planter2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
use_collision = true
size = Vector3(0.8, 0.6, 0.8)

[node name="Plant" type="CSGBox3D" parent="CityProps/Planter2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
use_collision = false
size = Vector3(0.4, 0.6, 0.4)

[node name="StreetLamp1" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 9)

[node name="Pole" type="CSGCylinder3D" parent="CityProps/StreetLamp1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
use_collision = true
radius = 0.1
height = 5.0

[node name="Light" type="OmniLight3D" parent="CityProps/StreetLamp1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
light_color = Color(1, 0.95, 0.8, 1)
light_energy = 3.0
omni_range = 12.0

[node name="LampHead" type="CSGBox3D" parent="CityProps/StreetLamp1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
size = Vector3(0.6, 0.8, 0.6)

[node name="StreetLamp2" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 9)

[node name="Pole" type="CSGCylinder3D" parent="CityProps/StreetLamp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
use_collision = true
radius = 0.1
height = 5.0

[node name="Light" type="OmniLight3D" parent="CityProps/StreetLamp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
light_color = Color(1, 0.95, 0.8, 1)
light_energy = 3.0
omni_range = 12.0

[node name="LampHead" type="CSGBox3D" parent="CityProps/StreetLamp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
size = Vector3(0.6, 0.8, 0.6)

[node name="Bench1" type="Node3D" parent="CityProps"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -10, 0, 8)

[node name="Seat" type="CSGBox3D" parent="CityProps/Bench1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
use_collision = true
size = Vector3(2, 0.3, 0.8)

[node name="Back" type="CSGBox3D" parent="CityProps/Bench1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.3)
size = Vector3(2, 1, 0.15)

[node name="Leg1" type="CSGBox3D" parent="CityProps/Bench1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.2, 0)
use_collision = true
size = Vector3(0.15, 0.4, 0.15)

[node name="Leg2" type="CSGBox3D" parent="CityProps/Bench1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0.2, 0)
use_collision = true
size = Vector3(0.15, 0.4, 0.15)

[node name="TrashCan1" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 8)

[node name="Body" type="CSGCylinder3D" parent="CityProps/TrashCan1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
use_collision = true
radius = 0.3
height = 1.0

[node name="Lid" type="CSGCylinder3D" parent="CityProps/TrashCan1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
radius = 0.35
height = 0.1

[node name="Mailbox1" type="Node3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 6)

[node name="Post" type="CSGBox3D" parent="CityProps/Mailbox1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
use_collision = true
size = Vector3(0.15, 2, 0.15)

[node name="Box" type="CSGBox3D" parent="CityProps/Mailbox1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
use_collision = true
size = Vector3(0.6, 0.4, 0.5)

[node name="Flag" type="CSGBox3D" parent="CityProps/Mailbox1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 2.3, 0)
size = Vector3(0.3, 0.05, 0.15)

[node name="AccentLight1" type="OmniLight3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 4)
light_color = Color(1, 0.7, 0.5, 1)
light_energy = 2.0
omni_range = 8.0

[node name="AccentLight2" type="OmniLight3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 3, 6)
light_color = Color(0.5, 0.8, 0.6, 1)
light_energy = 1.5
omni_range = 6.0

[node name="AccentLight3" type="OmniLight3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 3, 6)
light_color = Color(0.5, 0.8, 0.6, 1)
light_energy = 1.5
omni_range = 6.0

[node name="AccentLight4" type="OmniLight3D" parent="CityProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 15)
light_color = Color(0.7, 0.7, 0.9, 1)
light_energy = 1.8
omni_range = 7.0

[node name="Player" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 1, 200)

[node name="CafeBuilding" parent="." instance=ExtResource("3")]
visible = false

[node name="ShopBuilding" parent="." instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
visible = false

[node name="UI" parent="." instance=ExtResource("2")]

[node name="SeattleCity" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="PixelateLayer" parent="." instance=ExtResource("4")]
visible = false
